fix mobile spacing on single pages

--- a/assets/less/single.less
+++ b/assets/less/single.less
@@ -10,7 +10,7 @@
 	    margin-top: -25px;
 		margin-left: -50px;
 		margin-right: -55px;
-		margin-bottom: 50px;
+		margin-bottom: 25px;
 	}
 	.preprint {
 	   display: block;
@@ -32,7 +32,7 @@
 	.video-container {
 		margin: 0 -25px;
 		margin-right: -55px;
-		margin-top: -50px;
+		margin-top: -25px;
 		margin-bottom: 25px;
 		.video-area{
 		   position: relative;
@@ -185,11 +185,11 @@
 	.single{
 		.preprint-container{
 			margin: -50px;
-		    margin-bottom: 50px;
+		    margin-bottom: 25px;
 		}
 		.video-container {
 			margin: 0px -50px;
-			margin-top: -50px;
+			margin-top: -25px;
 			margin-bottom: 25px;
 			.video-area {
 				#chapters{
